gcc/testsuite/gcc.target/mips/r10k-cache-barrier-15.c
/* { dg-options "-mr10k-cache-barrier=store -mips2" } */
/* { dg-error "requires.*cache.*instruction" "" { target *-*-* } 0 } */
